Description: Dashboard alignment changes. Changelog : NA. Bug ID: NA Reviewed By: self

--- a/trunk/technical/src/web/splive/src/app/hpft/app/modules/dashboard/default-dashboard/default-dashboard.component.css
+++ b/trunk/technical/src/web/splive/src/app/hpft/app/modules/dashboard/default-dashboard/default-dashboard.component.css
@@ -80,6 +80,7 @@
 
 .d-block {
     display: block !important;
+    min-height: 54px;
 }
 
 .card .card-block p {
